InfraPlatform/elasticache/v2/cf-elasticache-serverless.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  AWSRegion:
    Type: String
    Description: AppShortName
    AllowedValues: 
      - ap-southeast-1
    Default: ap-southeast-1
  AppShortName:
    Type: String
    Description: AppShortName
  EnvName:
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev-b
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c      
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c 
    Description: Environment
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)
  AppSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: VPC Subnet ids for App
  VPCSubnetCidrAppAZ1:
    Type: String
    Description: AZ1 App Subnet
  VPCSubnetCidrAppAZ2:
    Type: String
    Description: AZ2 App Subnet
  VPCSubnetCidrAppAZ3:
    Type: String
    Description: AZ3 App Subnet
  MaxCacheDataStorage:
    Description: Maximum Limit for Cache Data Storage
    Type: Number
    Default: 0
  MaxCacheECPUPerSecond:
    Description: Maximum ECPU for Cache Limits
    Type: Number
    Default: 0
  Engine:
    Description: Redis or memcache
    Type: String
    Default: redis
    NoEcho: true
  SnapshotRetentionLimit:
    Description: How many snapshots do we need to retain
    Type: Number
    Default: 5
  DailySnapshotTime:
    Description: Schedule on when to take snapshot
    Type: String
    Default: "14:00"
  CreateCacheUserAndGroup:
    Type: String
    AllowedValues:
      - 'yes'
      - 'no'
    Default: 'yes'
    Description: Create cache user and group?

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasVPCSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, '']]
  CacheUsageLimits: !And [!Not [!Equals [!Ref MaxCacheDataStorage, 0]], !Not [!Equals [!Ref MaxCacheECPUPerSecond, 0]]]
  ShouldCreateCacheUserAndGroup: !Equals [!Ref CreateCacheUserAndGroup, 'yes']

Resources:
# IAM Policy
  PolicyElasticacheConnect:
    Type: AWS::IAM::ManagedPolicy
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'elasticache:Connect'
            Effect: Allow
            Resource:
              - !Sub arn:aws:elasticache:${AWSRegion}:${AWS::AccountId}:serverlesscache:${ElasticacheServerless}
              - !If 
                - ShouldCreateCacheUserAndGroup
                - !GetAtt ElasticacheUser.Arn
                - !Ref "AWS::NoValue"
        Version: 2012-10-17
      ManagedPolicyName: !Sub ${AppShortName}-${EnvName}-ElasticacheConnect
      Description: Policy to grant access for Elasticache serverless Cluster

# Security Group
  ElasticacheSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-elasticache
      GroupDescription: Security Group for Elasticache Redis Cluster
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6380
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6380
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: App Subnet AZ2
        - !If 
            - "HasVPCSubnetCidrAppAZ3"
            - IpProtocol: tcp
              FromPort: 6379
              ToPort: 6380
              CidrIp: !Ref VPCSubnetCidrAppAZ3
              Description: App Subnet AZ3
            - !Ref AWS::NoValue
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCacheServerless-v2

# CREATE ELASTICACHE USER
  ElasticacheUser:
    Type: AWS::ElastiCache::User
    Condition: ShouldCreateCacheUserAndGroup
    Properties:
      AccessString: "on ~* +@all"
      AuthenticationMode:
        Type: iam
      Engine: !Ref Engine
      NoPasswordRequired: False
      UserId: !Sub ${AppShortName}-${EnvName}-rediscacheadmin
      UserName: !Sub ${AppShortName}-${EnvName}-rediscacheadmin
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCacheServerless-v2

# ELASTICACHE USERGROUP MANAGEMENT
  ElasticacheUserGroup:
    Type: AWS::ElastiCache::UserGroup
    Condition: ShouldCreateCacheUserAndGroup
    Properties:
      Engine: !Ref Engine
      UserGroupId: !Sub ${AppShortName}-${EnvName}-rediscacheadmins
      UserIds: 
      - default
      - !Ref ElasticacheUser
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCacheServerless-v2

# ELASTICACHE RESOURCE
  ElasticacheServerless:
    Type: AWS::ElastiCache::ServerlessCache
    Properties:
      CacheUsageLimits:
# IF Max data storage and ECPU has value, activate cache usage limits
        !If
        - CacheUsageLimits
        -  
          DataStorage: 
            Maximum: !Ref MaxCacheDataStorage
            Unit: GB
          ECPUPerSecond: 
            Maximum: !Ref MaxCacheECPUPerSecond
        - !Ref "AWS::NoValue"
      DailySnapshotTime: !Ref DailySnapshotTime
      Description:  Redis Elasticache deployed as serverless application
      Engine: !Ref Engine
      SecurityGroupIds:
      - !GetAtt  ElasticacheSecurityGroup.GroupId
      ServerlessCacheName: !Sub ${AppShortName}-${EnvName}-elasticache-serverless
      SnapshotRetentionLimit: !Ref SnapshotRetentionLimit
      SubnetIds: !Ref AppSubnetIds
      UserGroupId: !If 
      - ShouldCreateCacheUserAndGroup
      - !Ref ElasticacheUserGroup
      - !Ref "AWS::NoValue"
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ElastiCacheServerless-v2
